--- a/3b.relax.html
+++ b/3b.relax.html
@@ -13,7 +13,9 @@
             width: 400px; height: 400px;
             border: none;
             background-color:rgb(196, 122, 122);
-            margin-left:120px}
+            position: absolute;
+            left:127px;
+            z-index: -1;}
             .red:hover {
                 display: inline-block;
                 width: 400px; height: 400px;
@@ -23,7 +25,9 @@
             display: inline-block;
             width: 400px; height: 400px;
             border: none;
-            background-color: rgb(44, 37, 118);}
+            background-color: rgb(44, 37, 118);
+            position:absolute;
+            left:530px}
             .blue:hover {
                 display: inline-block;
                 width: 400px; height: 400px;
@@ -34,7 +38,9 @@
             width: 400px; height: 400px;
             border: none;
             background-color: rgb(34, 72, 52);
-            margin-left:10px}
+            margin-left:10px;
+            position: absolute;
+            top:563px; left:10px}
             .green:hover {
                 display: inline-block;
                 width: 400px; height: 400px;
@@ -44,7 +50,10 @@
             display: inline-block;
             width: 400px; height: 400px;
             border: none;
-            background-color: rgb(213, 146, 87);}
+            background-color: rgb(213, 146, 87);
+            position: absolute;
+            top:563px; left: 423px;
+            z-index: -1;}
             .orange:hover{
                 display: inline-block;
                 width: 400px; height: 400px;
