--- a/3b.relax.html
+++ b/3b.relax.html
@@ -39,7 +39,7 @@
             border: none;
             background-color: rgb(34, 72, 52);
             margin-left:10px;
-            position: absolute;
+            position: fixed;
             top:563px; left:10px}
             .green:hover {
                 display: inline-block;
