--- a/3clost.html
+++ b/3clost.html
@@ -13,6 +13,7 @@
             font-family:"Timmana";
             text-decoration: none;
             text-align: left;}
+        a:hover{opacity: 0.7;}
         a.one{
             font-size:14pt;
             color:rgb(159, 184, 210);
