--- a/3bclose.html
+++ b/3bclose.html
@@ -25,7 +25,7 @@
         <div class="close">
             <iframe width="672" height="378" 
             src="https://www.youtube.com/embed/nLpTpr7_Ye8?rel=0&autoplay=1&start=7" 
-            frameborder="0" allow="accelerometer; autoplay=1; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen></iframe>
         </div>
     </body>
