--- a/3bgoodguy.html
+++ b/3bgoodguy.html
@@ -26,7 +26,7 @@
          <div class="goodguy">
            <iframe width="672" height="378" 
            src="https://www.youtube.com/embed/jgNjn2b1Jl0?rel=0&autoplay=1" frameborder="0" 
-           allow="accelerometer; autoplay=1; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
            allowfullscreen></iframe>
         </div>
     </body>
