--- a/3bivy.html
+++ b/3bivy.html
@@ -26,7 +26,7 @@
         <div class="ivy">
             <iframe width="672" height="372" 
             src="https://www.youtube.com/embed/f5MxcjweqeM?start=8&rel=0&autoplay=1" 
-            frameborder="0" allow="accelerometer; autoplay=1; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen></iframe>
         </div>
     </body>
